# langgraph-chat-agent

./: .gitignore  GEMINI.md  README.md  blog.txt  main.py  pyproject.toml  requirements.txt
config/: config.yaml  faq.md  flow.yaml  openapi.json  response_generator.txt  tasks.yaml
src/: audit.py  config.py  flow_agent.py  guardrails.py  intent_classifier.py  knowledge_agent.py  main.py  response_generator.py  state.py  task_registry.py
src/prompts/: intent_classifier.txt  safety_check.txt
tests/: test_e2e_conversation.py  test_intent_classification.py  test_rag_conversation.py
